--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
           margin-top: 10px;
         }
       }
+
+      @media screen and (min-width: 600px) {
+        .input-container {
+          margin-top: 60px;
+        }
+      }
     </style>
   </head>
 
