--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       button {
         background-color: #ccc;
         padding: 10px;
+        cursor: pointer;
       }
 
       .primary-container {
@@ -115,6 +116,10 @@
       .primary-container .icon .icon-text {
         font-size: 14px;
         opacity: 0.8;
+      }
+      
+      button:hover {
+          background: #104b79;
       }
 
       .input-container {
@@ -187,11 +192,6 @@
           margin-top: 60px;
         }
       }
-
-      button:hover {
-        background: #0d3b5e;
-      }
-
       /*by @solstice23*/
       .md-ripple {
         border-radius: 50%;
